--- a/templates/dashboard/recommendation_form.html
+++ b/templates/dashboard/recommendation_form.html
@@ -1,14 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>University Recommendation</title>
-</head>
-<body>
-    <h1>Enter Your Details</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Get Recommendations</button>
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block title %}University Recommendation{% endblock %}
+
+{% block content %}
+<div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
+        <div class="card shadow-sm">
+            <div class="card-header bg-primary text-white">
+                <h4 class="mb-0">Enter Your Details for Recommendations</h4>
+            </div>
+            <div class="card-body">
+                <p class="card-text text-muted">Provide your academic details to receive personalized university recommendations.</p>
+                <form method="post" novalidate>
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <div class="d-grid mt-4">
+                        <button type="submit" class="btn btn-primary btn-lg">Get Recommendations</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
